--- a/index.html
+++ b/index.html
@@ -3,19 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Health App</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Health and Fitness Home Page</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <header>
         <h1>Health App</h1>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#features">Features</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="healthAssessment.html">Health Assessment</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="fitnessTracker.html">Fitness Tracker</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
