change navbar style and html

--- a/healthAssessment.html
+++ b/healthAssessment.html
@@ -8,12 +8,19 @@
 </head>
 <body>
     <header>
-        <h1>Health App Questionnaires</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="healthAssessment.html">Health Assessment</a></li>
-                <li><a href="fitnessTracker.html">Fitness Tracker</a></li>
+                <li><a href="healthAssessment.html">Assessment</a></li>
+                <li class="dropdown">
+                    <button class="dropbtn">Fitness
+                        <i class="fa fa-caret-down"></i>
+                    </button>
+                    <div class="dropdown-content">
+                        <a href="fitnessTracker.html">Fitness Tracker</a>
+                        <a href="fitnessVideos.html">Fitness Videos</a>
+                    </div>
+                </li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
