--- a/index.html
+++ b/index.html
@@ -5,16 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Health and Fitness Home Page</title>
     <link rel="stylesheet" href="index.css">
-    <script src="index.js"></script>
 </head>
 <body>
     <header>
-        <h1>Health App</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="healthAssessment.html">Health Assessment</a></li>
-                <li><a href="fitnessTracker.html">Fitness Tracker</a></li>
+                <li><a href="healthAssessment.html">Assessment</a></li>
+                <li class="dropdown">
+                    <button class="dropbtn">Fitness
+                        <i class="fa fa-caret-down"></i>
+                    </button>
+                    <div class="dropdown-content">
+                        <a href="fitnessTracker.html">Fitness Tracker</a>
+                        <a href="fitnessVideos.html">Fitness Videos</a>
+                    </div>
+                </li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
