changed file name for clarity

--- a/fitnessTracker.html
+++ b/fitnessTracker.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fitness Tracker</title>
-    <link rel="stylesheet" href="fitnessStyle.css">
+    <link rel="stylesheet" href="fitnessTracker.css">
 </head>
 <body>
     <header>
@@ -86,6 +86,6 @@
         <p>&copy; 2024 Health App. All rights reserved.</p>
     </footer>
 
-    <script src="fitnessJS.js"></script>
+    <script src="fitnessTracker.js"></script>
 </body>
 </html>
