add new sections with images

--- a/index.html
+++ b/index.html
@@ -41,18 +41,45 @@
         <section id="features">
             <h2>Features</h2>
             <ul>
-                <li>Health Information Collection</li>
-                <li>Health Data Analysis</li>
-                <li>Personalized Recommendations</li>
-                <li>Fitness Tracking</li>
-                <li>Dietary Suggestions</li>
+                <li>
+                    <h3>Health Information Collection</h3>
+                    <p>Gather essential health metrics like weight, height, and activity levels to personalize your wellness journey.</p>
+                </li>
+                <li>
+                    <h3>Health Data Analysis</h3>
+                    <p>Analyze your health data to identify patterns and insights that help you stay on track with your goals.</p>
+                </li>
+                <li>
+                    <h3>Personalized Recommendations</h3>
+                    <p>Receive tailored advice and suggestions based on your unique health profile and needs.</p>
+                </li>
+                <li>
+                    <h3>Fitness Tracking</h3>
+                    <p>Monitor your physical activities and progress to ensure you’re reaching your fitness milestones.</p>
+                </li>
+            </ul>
+        </section>
+
+        <section id="getfit">
+            <h2>Get Fit</h2>
+            <ul>
+                <li>
+                    <img src="17932125_1615817878TuWuse_what_you_got.png" alt="">
+                    <p>IMPROVE MOBILITY</p>
+                </li>
+                <li>
+                    <img src="17932831_1615819230mVtget_stronger.png" alt="">
+                    <p>Build Strength</p>
+                </li>
+                <li>
+                    <img src="17932872_16158192489Zmfeel_your_best.png" alt="">
+                    <p>Get Lean</p>
+                </li>
             </ul>
         </section>
 
     </main>
 
-    <footer>
-        <p>&copy; 2024 Health App. All rights reserved.</p>
-    </footer>
+    
 </body>
 </html>
